[package]
name = "api-relay"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
jsonwebtoken = "9"
argon2 = "0.5"
uuid = { version = "1", features = ["v4"] }
tower-http = { version = "0.5", features = ["cors"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
futures = "0.3"
rand = "0.8"
